# base2game

./: .gitignore  CMakeLists.txt  android.sh  compile_commands.json  gradle.properties  run.sh
.cache/clangd/index/: display.c.8DEC71FA155BCEF7.idx  raylib.h.A1D62B6568133FF7.idx  raymob.h.FB7B01F701F1A34A.idx  soft_keyboard.c.B2F5E92E97945FC9.idx
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: funny_math.c  main.c  save.c  save.h
app/src/main/cpp/platform/: storagePath.h
app/src/main/res/xml/: file_paths.xml
src/: constants.h  funny_math.c  funny_math.h  main.c  save.c  save.h
src/platform/: storagePath.h
src/platform/linux/: getAppStoragePath.c  getAppStoragePath.h
